ostias de rosajijij

--- a/views/Categorias/a.html
+++ b/views/Categorias/a.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body style="background-image: linear-gradient(87deg,#400039, rgb(166, 12, 102)) ;">
-    
+    <link rel="stylesheet" href="../../src/query/clase.php">
 </body>
 </html>
